# ccsd_gpu

./: .gitignore  GPU_LAMBDA_PORT_PLAN.md  README.md  plan.md  pyproject.toml
benchmarks/: benchmark_aniline_lambda_compare.py  benchmark_lambda_from_checkpoint.py  benchmark_lambda_iteration_from_checkpoint.py  benchmark_vvvv_from_checkpoint.py  benchmark_vvvv_random.py  generate_lambda_checkpoint.py  lambda_checkpoint.py  summarize_lambda_benchmarks.py
ccsd_gpu/: __init__.py  gpu4pyscf_utils.py  gpu_ccsd_grad.py  gpu_ccsd_lambda.py
ccsd_gpu/cuda/: __init__.py  int2e_gpu.py  int2e_ip1_gpu.py  int2e_ip1_module.py  int2e_module.py  rys_data_n9.json
examples/: h2o_ccsd_grad.py
scripts/: gpu_smoke_check.py  regular.sh  setup_gpu_env.sh
tests/: test_aniline_parity.py  test_gpu_ccsd_grad.py  test_gpu_vvvv_lambda.py  test_int2e_gpu.py  test_int2e_ip1_gpu.py
